components/newtest2sscx/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-application
    appstudio.openshift.io/component: newtest2sscx
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elnewtest2sscx
  namespace: sdouglas1
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-newtest2sscx
    weight: null
status: {}
